--- a/vue from scratch/index.html
+++ b/vue from scratch/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="components/message.js"></script>
-
+<script src="components/computed-properties.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,7 @@
 <body>
     <div id="app">
         <message></message>
+        <computed-properties></computed-properties>
     </div>
 
 </body>
