*.- uso de metodos. *.- Uso de databinding.

--- a/vue from scratch/index.html
+++ b/vue from scratch/index.html
@@ -3,6 +3,9 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="components/message.js"></script>
 <script src="components/computed-properties.js"></script>
+<script src="components/methods.js"></script>
+<script src="components/vmodel.js"></script>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +18,8 @@
     <div id="app">
         <message></message>
         <computed-properties></computed-properties>
+        <methods></methods>
+        <vmodel></vmodel>
     </div>
 
 </body>
