--- a/vue from scratch/index.html
+++ b/vue from scratch/index.html
@@ -8,6 +8,13 @@
 <script src="components/vmodel-checkboxes.js"></script>
 <script src="components/emit.js"></script>
 <script src="components/parent-data.js"></script>
+<script src="components/child-data.js"></script>
+<script src="components/child-methods.js"></script>
+<script src="components/login-form.js"></script>
+<script src="components/loops.js"></script>
+<script src="components/conditionals.js"></script>
+<script src="components/slots.js"></script>
+<script src="components/watchers.js"></script>
 
 <head>
     <meta charset="UTF-8">
@@ -26,12 +33,38 @@
         <vmodel-checkboxes></vmodel-checkboxes>
         <emit @carbrand="showCarBrandFromEmitCmp"></emit>
         <parten-data></parten-data>
+        <child-data ref="childData"></child-data>
+        <child-methods ref="childMethod"></child-methods>
+        <login-form></login-form>
+        <loops></loops>
+        <conditionals></conditionals>
+        <slots>
+
+            <template slot="header">
+                <h3>Header del layout con Slots</h3>
+            </template>
+            <p>Contenido del slot para el cuerpo</p>
+
+            <template slot="footer">
+                <h3>Footer del layout con Slots</h3>
+            </template>
+                    <p>Footer layout </p>
+        </slots>
+        <watchers></watchers>
+        
     </div>
 
 </body>
 <script>
     new Vue({
         el: '#app',
+    mounted() {
+          const cmpName= this.$refs.childData.cmpName;
+          console.log(cmpName);
+        setTimeout(()=>{
+            this.$refs.childMethod.showCmpName();
+        },3000);
+       },
         data(){
             return{
                 appName:"inciando con Vue js"
