--- a/vue from scratch/index.html
+++ b/vue from scratch/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="components/directives/focus.js"></script>
+<script src="components/directives/change-styles.js"></script>
+<script src="components/filters/currency-filter.js"></script>
 <script src="components/message.js"></script>
 <script src="components/computed-properties.js"></script>
 <script src="components/methods.js"></script>
@@ -15,7 +18,13 @@
 <script src="components/conditionals.js"></script>
 <script src="components/slots.js"></script>
 <script src="components/watchers.js"></script>
-
+<script src="components/computed-properties-get-set.js"></script>
+<script src="components/dynamic-components/cmp1.js"></script>
+<script src="components/dynamic-components/cmp2.js"></script>
+<script src="components/dynamic-components/cmp3.js"></script>
+<script src="components/load-dynamic-component.js"></script>
+<script src="components/mixins.js"></script>
+  
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,8 +34,8 @@
 </head>
 
 <body>
-    <div id="app">
-        <message></message>
+    <div id="app" style="margin-bottom: 100px">
+        <message  v-change-styles="{backgroundColor:'red', color:'white'}"></message>
         <computed-properties></computed-properties>
         <methods></methods>
         <vmodel></vmodel>
@@ -51,9 +60,12 @@
                     <p>Footer layout </p>
         </slots>
         <watchers></watchers>
-        
-    </div>
+        <computed-properties-get-set></computed-properties-get-set>
 
+        <load-dynamic-component></load-dynamic-component>
+        <mixins></mixins>
+
+    </div>
 </body>
 <script>
     new Vue({
