*.- Se agrega propiedad y le paso parametros.

--- a/vue from scratch/index.html
+++ b/vue from scratch/index.html
@@ -24,6 +24,7 @@
 <script src="components/dynamic-components/cmp3.js"></script>
 <script src="components/load-dynamic-component.js"></script>
 <script src="components/mixins.js"></script>
+<script src="components/prop.js"></script>
   
 <head>
     <meta charset="UTF-8">
@@ -64,6 +65,7 @@
 
         <load-dynamic-component></load-dynamic-component>
         <mixins></mixins>
+        <props name="mono" surname="llanos" :age="17" ></props>
 
     </div>
 </body>
